<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
tools:context=".ui.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginTopBarTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_48dp"
            android:text="@string/login_topBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/loginEmailTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginBottom="@dimen/space_16dp"
            android:hint="@string/email_hint"
            app:layout_constraintBottom_toTopOf="@id/loginPasswordTil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textEmailAddress" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailTiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/loginPasswordTil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginBottom="@dimen/space_16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordTiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/loginRememberMeCb"
            android:layout_width="@dimen/space_24dp"
            android:layout_height="@dimen/space_24dp"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordTil" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:text="@string/remember_me"
            app:layout_constraintBottom_toBottomOf="@id/loginRememberMeCb"
            app:layout_constraintStart_toEndOf="@id/loginRememberMeCb"
            app:layout_constraintTop_toTopOf="@id/loginRememberMeCb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_8dp"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toBottomOf="@id/loginRememberMeCb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginRememberMeCb" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginEnterButton"
            style="@style/DarkOrangeButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_48dp"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginRememberMeCb"
            app:layout_constraintBottom_toTopOf="@id/loginOrConnectWithTv"
            android:text="@string/login_topBar"/>

        <TextView
            android:id="@+id/loginOrConnectWithTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_connect_with"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/space_16dp"
            app:layout_constraintTop_toBottomOf="@id/loginEnterButton"
            app:layout_constraintBottom_toTopOf="@id/loginGooglePlusMb"/>

        <com.google.android.material.button.MaterialButton
            style="@style/LoginOptionsContainer"
            android:layout_marginEnd="@dimen/space_16dp"
            android:padding="0dp"
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@id/loginGooglePlusMb"
            app:layout_constraintEnd_toStartOf="@id/loginGooglePlusMb"
            app:layout_constraintTop_toTopOf="@id/loginGooglePlusMb"
            app:strokeColor="#3B5998" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginGooglePlusMb"
            style="@style/LoginOptionsContainer"
            app:icon="@drawable/ic_google_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginEnterButton"
            app:strokeColor="#DD4B39" />

        <com.google.android.material.button.MaterialButton
            style="@style/LoginOptionsContainer"
            android:layout_marginStart="@dimen/space_16dp"
            app:icon="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="@id/loginGooglePlusMb"
            app:layout_constraintStart_toEndOf="@id/loginGooglePlusMb"
            app:layout_constraintTop_toTopOf="@id/loginGooglePlusMb"
            app:strokeColor="#1DA1F2" />

        <TextView
            android:id="@+id/loginDoesntHaveAnAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginGooglePlusMb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/loginGooglePlusMb"
            app:layout_constraintEnd_toStartOf="@id/loginSignInMb"
            android:text="@string/doesnt_have_an_account"
            android:layout_marginBottom="@dimen/space_16dp"/>

        <TextView
            android:id="@+id/loginSignInMb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/loginGooglePlusMb"
            app:layout_constraintTop_toTopOf="@id/loginDoesntHaveAnAccountTv"
            app:layout_constraintBottom_toBottomOf="@id/loginDoesntHaveAnAccountTv"
            app:layout_constraintStart_toEndOf="@id/loginDoesntHaveAnAccountTv"
            android:text="@string/sign_in"
            android:textColor="@color/orange_dark"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="@dimen/space_8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

